--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,8 +3,9 @@ database: false
 description: Logs chat and commands
 main: me.alrik94.plugins.cclogger.CCLogger
 name: CCLogger
+api-version: 1.13
 startup: postworld
-version: '3.2.0'
+version: '3.2.1'
 permissions:
   cclogger.notify:
     description: Players with this permission get notified when a player says anything on the chat or command notify list.
